<resources>

    <string name="app_name" translatable="false">TajMahal</string>

    <string name="restaurant">Restaurant</string>
    <string name="maps_not_installed">Google Maps is not installed.</string>
    <string name="phone_not_found">No app found for making calls.</string>
    <string name="no_browser_found">No browser found.</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="on_site">Dine-in</string>
    <string name="take_away">Takeaway</string>

    <string name="tajmahal_typical_food_description">A typical Indian dish from Taj Mahal restaurant.</string>

    <string name="button_phone">Call the restaurant</string>
    <string name="button_website">Visit the restaurant\'s website</string>
    <string name="button_adress">View the restaurant\'s location on map</string>

    <string name="icon_gps" translatable="false">Icon GPS</string>
    <string name="icone_weekday" translatable="false">Icone weekday</string>
    <string name="icone_website" translatable="false">Icone website</string>
    <string name="phone_icon" translatable="false">Phone icon</string>

    <string name="leave_a_review" translatable="false">Leave a review</string>
    <string name="validate" translatable="false">Validate</string>
    <string name="share_your_experience" translatable="false">Share your experience details here</string>
    <string name="user_picture" translatable="false">Portrait of the critic</string>
    <string name="arrow_back" translatable="false">Back arrow</string>

    <string name="issue_review_empty" translatable="false">The review must be completed</string>
    <string name="issue_rate_empty" translatable="false">A rating must be chosen</string>
    <string name="issue_review_length" translatable="false">The review must be more than three letters</string>

    <string name="success_review_message" translatable="false">Your review is recorded. Thank you for your feedback.</string>
    <string name="error_review_message" translatable="false">An error has occurred, please try again later</string>

</resources>
